Issue #304 adjusted spacing between treaties view fields

--- a/docroot/sites/all/themes/informea.theme/css/style-from-less.css
+++ b/docroot/sites/all/themes/informea.theme/css/style-from-less.css
@@ -1855,7 +1855,7 @@
       flex-wrap: wrap;
 }
 [dir] .page-regions .views-field-treaty-links ul, [dir] .page-topics .views-field-treaty-links ul {
-  margin-top: .5em;
+  margin-top: .7em;
 }
 [dir=ltr] .page-regions .views-field-treaty-links ul, [dir=ltr] .page-topics .views-field-treaty-links ul {
   padding-left: 0;
