--- a/docroot/sites/all/themes/informea.theme/less/pages/regional-page.less
+++ b/docroot/sites/all/themes/informea.theme/less/pages/regional-page.less
@@ -47,7 +47,7 @@
       display: flex;
       flex-wrap: wrap;
       margin-left: -.3rem;
-      margin-top: .5em;
+      margin-top: .7em;
     }
     li {
       margin-left: .3rem;
